# scout_mobile_robot

./: NOTE.md  README.md  openCam.py  readbi.md  readme.md
scout_base/: CMakeLists.txt
scout_base/include/lcmtypes/: wescore.h  wescore.hpp  wescore_lcm_msgs_IMU.h  wescore_lcm_msgs_JideTechCam.h  wescore_lcm_msgs_Range.h  wescore_lcm_msgs_SensorhubHeartbeat.h  wescore_lcm_msgs_UltrasonicW200D.h
scout_base/include/lcmtypes/wescore_lcm_msgs/: IMU.hpp  JideTechCam.hpp  Range.hpp  SensorhubHeartbeat.hpp  UltrasonicW200D.hpp
scout_base/launch/: view_scout_model.launch
scout_base/src/: pose_ptz_cam.cpp  ptz_cam_srv_client.cpp  scout_csi_camera.cpp  sensorhub_node.cpp
scout_base/tests/: ptz_ctrl_publisher.cpp  ptz_pose.cpp  ptz_service_call_node.cpp  test_ptz_ctrl.cpp
scout_bringup/launch/: scout_nav_base.launch  scout_sim_nav_base.launch  sensor_edom_cams.launch  sensor_jidetech_ipcam.launch  sensor_pointcloud_filter.launch  sensor_rs16_filter.launch  sensor_rslidar16.launch
scout_msgs/: CMakeLists.txt  package.xml
scout_msgs/msg/: PTZ.msg  UltrasonicW200D.msg
scout_msgs/srv/: JideTechPTZ.srv
scout_navigation/: CMakeLists.txt  package.xml
scout_navigation/config/: costmap_common.yaml  costmap_local.yaml  planner.yaml
scout_navigation/launch/: config_amcl.launch  config_gmapping.launch  config_move_base.launch  scout_mapping_demo.launch  scout_navigation_demo.launch
scout_navigation/maps/: B6_CAD.pgm  B6_CAD.yaml  RRC_CAD_24MAR.pgm  RRC_CAD_24MAR.yaml  RRCcad1.pgm  RRCcad1.yaml  controlSystemLab.yaml  roboticslab.yaml  rrc.yaml
scout_python/: CMakeLists.txt  package.xml
scout_python/python/: send_light_cmd.py
scout_ultrasonic/: CMakeLists.txt  package.xml
scout_ultrasonic/launch/: scout_ultrasonic.launch
scout_ultrasonic/src/: backward.py  brake.py  ultra.py
scout_viz/: CHANGELOG.md  package.xml
scout_viz/launch/: view_model.launch  view_robot.launch
scout_viz/rviz/: scout_model.rviz
scout_webots_sim/include/scout_webots_sim/: scout_sim_params.hpp  scout_webots_interface.hpp
scout_webots_sim/launch/: scout_sim_nav.launch
scout_webots_sim/src/: scout_webots_interface.cpp  scout_webots_node.cpp
twist_mux/config/: twist_mux_topics.yaml
